--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,33 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- font awwesome link -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+		integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+		crossorigin="anonymous" type="text/css" />
+	<!-- materialize css link -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+		type="text/css">
+	<!-- own css link -->
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+	{% block styles %}
+	{% endblock %}
 	<title>Task Manager</title>
 </head>
 
 <body>
-<h1>I'm part of the base template!</h1>
-    {% block content %}
-    {% endblock %}
+	{% block content %}
+	{% endblock %}
+
+	<!-- jQuery link -->
+	<script src="http://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<!-- materialize link -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<!-- own js link -->
+	<script src="{{ url_for('static', filename='js/script.js') }}"></script>
+	{% block scripts %}
+	{% endblock %}
 </body>
 
 </html>
