--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- font awwesome link -->
+	<!-- font awesome link -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
 		integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
 		crossorigin="anonymous" type="text/css" />
@@ -19,12 +19,45 @@
 </head>
 
 <body>
+
+	<header>
+		<!-- top navbar -->
+		<nav class="nav-extended text-shadow #8e24aa purple darken-1">
+			<div class="nav-wrapper">
+				<a href="{{ url_for('get_tasks')}}" class="brand-logo">Task Manager</a>
+				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+				<ul class="right hide-on-med-and-down">
+					<li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+					<li><a href="#">Profile</a></li>
+					<li><a href="#">New Task</a></li>
+					<li><a href="#">Manage Categories</a></li>
+					<li><a href="#">Log Out</a></li>
+					<li><a href="#">Log In</a></li>
+					<li><a href="#">Register</a></li>
+				</ul>
+			</div>
+		</nav>
+		<!-- mobile side navbar -->
+		<ul class="sidenav" id="mobile-demo">
+			<li>
+				<h4 class="center-align light-blue-text text-darken-4">Task Manager</h4>
+			</li>
+			<li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+			<li><a href="#">Profile</a></li>
+			<li><a href="#">New Task</a></li>
+			<li><a href="#">Manage Categories</a></li>
+			<li><a href="#">Log Out</a></li>
+			<li><a href="#">Log In</a></li>
+			<li><a href="#">Register</a></li>
+		</ul>
+	</header>
+
 	{% block content %}
 	{% endblock %}
 
-	<!-- jQuery link -->
-	<script src="http://code.jquery.com/jquery-3.5.1.min.js"
-		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<!-- jQuery CDN link-->
+	<script src="https://code.jquery.com/jquery-3.5.1.js"
+		integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<!-- materialize link -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<!-- own js link -->
