--- a/templates/base.html
+++ b/templates/base.html
@@ -52,8 +52,23 @@
 		</ul>
 	</header>
 
-	{% block content %}
-	{% endblock %}
+    <section>
+    <!-- diplayed flash messages -->
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="row flashes">
+                    <h4 class="#e1bee7 purple lighten-4 center-align">{{ message }}</h4>
+                </div>    
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    </section>
+
+	<main class="container">
+		{% block content %}
+		{% endblock %}
+	</main>
 
 	<!-- jQuery CDN link-->
 	<script src="https://code.jquery.com/jquery-3.5.1.js"
