--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
 			<div class="row">
 				<div class="input-field col s12">
 					<i class="fas fa-user-plus prefix purple-text text-darken-1"></i>
-					<input id="username" name="username" type="text" class="validate">
+					<input id="username" name="username" type="text" class="validate" minlength="5" maxlength="15" required pattern="^[a-zA-Z0-9]{5,15}$">
 					<label for="username">Username</label>
 				</div>
 			</div>
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="input-field col s12">
 					<i class="fas fa-user-lock prefix purple-text text-darken-1"></i>
-					<input id="password" name="password" type="password" class="validate">
+					<input id="password" name="password" type="password" class="validate" minlength="5" maxlength="15" required pattern="^[a-zA-Z0-9]{5,15}$">
 					<label for="password">Password</label>
 				</div>
 			</div>
