added login functionality

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Register</h3>
+<h3 class="center-align">Log In</h3>
 
 <div class="row">
-	<form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+	<form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
 		<div class="card-panel">
 			<!-- username -->
 			<div class="row">
 				<div class="input-field col s12">
-					<i class="fas fa-user-plus prefix purple-text text-darken-1"></i>
+					<i class="fas fa-user-cog prefix purple-text text-darken-1"></i>
 					<input id="username" name="username" type="text" class="validate" minlength="5" maxlength="15" required pattern="^[a-zA-Z0-9]{5,15}$">
 					<label for="username">Username</label>
 				</div>
@@ -22,10 +22,10 @@
 					<label for="password">Password</label>
 				</div>
 			</div>
-			<!-- register -->
+			<!-- login -->
 			<div class="row">
 				<button type="submit" class="col s12 btn-large #8e24aa purple darken-1 text-shadow">
-                Register <i class="fas fa-sign-in-alt"></i>
+                Log In <i class="fas fa-sign-in-alt"></i>
                 </button>
 			</div>
 		</div>
@@ -33,8 +33,8 @@
 </div>
 <div class="row">
 	<div class="col s12">
-		<p class="center-align">Already Registered?
-			<a href="{{ url_for('login') }}" class="purple-text text-darken-1">Log In</a>
+		<p class="center-align">New Here?
+			<a href="{{ url_for('register') }}" class="purple-text text-darken-1">Register Account</a>
 		</p>
 	</div>
 </div>
