--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,15 @@
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-					<li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-					<li><a href="#">New Task</a></li>
-					<li><a href="#">Manage Categories</a></li>
-					<li><a href="#">Log Out</a></li>
-					<li><a href="{{ url_for('login') }}">Log In</a></li>
-					<li><a href="{{ url_for('register') }}">Register</a></li>
+			    {% if session.user %}
+			        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+			        <li><a href="#">New Task</a></li>
+			        <li><a href="#">Manage Categories</a></li>
+			        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+			    {% else %}
+			        <li><a href="{{ url_for('login') }}">Log In</a></li>
+			        <li><a href="{{ url_for('register') }}">Register</a></li>
+			    {% endif %}
 				</ul>
 			</div>
 		</nav>
@@ -43,27 +46,30 @@
 				<h4 class="center-align purple-text text-darken-4">Task Manager</h4>
 			</li>
 			<li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-			<li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-			<li><a href="#">New Task</a></li>
-			<li><a href="#">Manage Categories</a></li>
-			<li><a href="#">Log Out</a></li>
-			<li><a href="{{ url_for('login') }}">Log In</a></li>
-			<li><a href="{{ url_for('register') }}">Register</a></li>
+			    {% if session.user %}
+			        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+			        <li><a href="#">New Task</a></li>
+			        <li><a href="#">Manage Categories</a></li>
+			        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+			    {% else %}
+			        <li><a href="{{ url_for('login') }}">Log In</a></li>
+			        <li><a href="{{ url_for('register') }}">Register</a></li>
+			    {% endif %}
 		</ul>
 	</header>
 
-    <section>
-    <!-- diplayed flash messages -->
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-                <div class="row flashes">
-                    <h4 class="#e1bee7 purple lighten-4 center-align">{{ message }}</h4>
-                </div>    
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-    </section>
+	<section>
+		<!-- diplayed flash messages -->
+		{% with messages = get_flashed_messages() %}
+		{% if messages %}
+		{% for message in messages %}
+		<div class="row flashes">
+			<h4 class="#e1bee7 purple lighten-4 center-align">{{ message }}</h4>
+		</div>
+		{% endfor %}
+		{% endif %}
+		{% endwith %}
+	</section>
 
 	<main class="container">
 		{% block content %}
