binded data to edit task form

--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -15,11 +15,17 @@
           class="validate"
           required
         >
-          <option value="" disabled selected>Choose Category</option>
-          {% for category in categories %}
-          <option value="{{ category.category_name }}"
-            >{{ category.category_name }}</option
-          >
+            <option value="" disabled>Choose Category</option>
+                {% for category in categories %}
+                    {% if category.category_name == task.category_name %}
+                        <option value="{{ category.category_name }}" selected
+                            >{{ category.category_name }}</option
+                        >
+                    {% else %}
+                        <option value="{{ category.category_name }}"
+                            >{{ category.category_name }}</option
+                        >
+                    {% endif %}
           {% endfor %}
         </select>
         <label for="category_name">Task Category</label>
@@ -35,6 +41,7 @@
           name="task_name"
           minlength="5"
           maxlength="50"
+          value="{{ task.task_name }}"
           type="text"
           class="validate"
           required
@@ -54,7 +61,9 @@
           minlength="5"
           maxlength="200"
           required
-        ></textarea>
+        >
+        {{- task.task_description }}
+        </textarea>
         <label for="task_description">Task Description</label>
       </div>
     </div>
@@ -67,6 +76,7 @@
           id="due_date"
           name="due_date"
           type="text"
+          value="{{ task.due_date }}"
           class="datepicker validate"
           required
         />
@@ -82,7 +92,11 @@
             class="fas fa-exclamation-circle prefix purple-text text-darken-4"
           ></i>
           <label for="is_urgent">
+        {% if task.is_urgent == "on" %}
+            <input type="checkbox" id="is_urgent" name="is_urgent" checked />
+        {% else %}
             <input type="checkbox" id="is_urgent" name="is_urgent" />
+        {% endif %}
             <span class="lever"></span>
             Is Urgent
           </label>
@@ -93,6 +107,10 @@
     <!-- submit button -->
     <div class="row">
       <div class="col s12 center-align">
+      <!-- cancel button -->
+      <a href="{{ url_for('get_tasks') }}" class="btn-large red text-shadow">
+      Cancel <i class="fas fa-edit right"></i>
+      </a>
         <button class="btn-large purple darken-1 text-shadow" type="submit">
           Edit Task
           <i class="fas fa-edit right"></i>
