--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,10 @@
 			    {% if session.user %}
 			        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
 			        <li><a href="{{ url_for('add_task') }}">New Task</a></li>
-			        <li><a href="#">Manage Categories</a></li>
-			        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+			        {% if session.user|lower == "admin"|lower %}
+                        <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
+			        {% endif %}
+                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
 			    {% else %}
 			        <li><a href="{{ url_for('login') }}">Log In</a></li>
 			        <li><a href="{{ url_for('register') }}">Register</a></li>
@@ -49,7 +51,9 @@
 			    {% if session.user %}
 			        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
 			        <li><a href="{{ url_for('add_task') }}">New Task</a></li>
-			        <li><a href="#">Manage Categories</a></li>
+			        {% if session.user|lower == "admin"|lower %}
+                        <li><a href="{{ url_for('get_categories')}}">Manage Categories</a></li>
+			        {% endif %}
 			        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
 			    {% else %}
 			        <li><a href="{{ url_for('login') }}">Log In</a></li>
